[gd_scene load_steps=5 format=3 uid="uid://d2lppingadft4"]

[ext_resource type="Script" path="res://Missions/main_menu.gd" id="1_qjfdi"]
[ext_resource type="PackedScene" uid="uid://dnsnlumcy7yvd" path="res://UI/options_menu.tscn" id="2_aufbw"]
[ext_resource type="PackedScene" uid="uid://bwj8dvh4oj5ta" path="res://UI/campaign_menu.tscn" id="3_6drsn"]
[ext_resource type="PackedScene" uid="uid://clyfmcqjwabky" path="res://UI/credits_screen.tscn" id="4_pk7wi"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjfdi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -235.0
offset_right = 216.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 57.0
offset_right = 140.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 41.0
offset_top = 150.0
offset_right = 397.0
offset_bottom = 424.0

[node name="CampaignButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Campaign"

[node name="Margin" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Options"

[node name="Margin2" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="Credits" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Credits"

[node name="Margin3" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="QuitGameButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Quit Game"

[node name="OptionsMenu" parent="." instance=ExtResource("2_aufbw")]
visible = false
layout_mode = 1

[node name="CampaignMenu" parent="." instance=ExtResource("3_6drsn")]
visible = false
layout_mode = 1

[node name="CreditsScreen" parent="." instance=ExtResource("4_pk7wi")]
visible = false
layout_mode = 1
